--- a/test_app_blog/templates/email/activation.html
+++ b/test_app_blog/templates/email/activation.html
@@ -1,11 +1,5 @@
-{% block subject %}
-{% blocktrans %}Account activation on {{ site_name }}{% endblocktrans %}
-{% endblock subject %}
+{% autoescape off %}
 
-{% block text_body %}
-{% blocktrans %}You're receiving this email because you need to finish activation process on {{ site_name }}.{% endblocktrans %}
+{{ protocol }}://{{ domain }}{% url 'account_activate' uidb64=uid token=token %}
 
-{% trans "Please go to the following page to activate account:" %}
-{{ http }}://{{ localhost:3000 }}/{{ {% url 'registration/activate' uidb64=uid token=token %} }}
-
-{% trans "Thanks for using our site!" %}
+{% endautoescape %}
